--- a/pyost_autoticket/pyost_autoticket.sample.ini
+++ b/pyost_autoticket/pyost_autoticket.sample.ini
@@ -1,7 +1,7 @@
 [pyost_autoticket]
-database=pyost_autoticket.db3
-ost_url=
-ost_apikey=
+database=pyost_autoticket.sqlite3
+ost_tickets_json_url=https://mysite.com/api/http.php/tickets.json
+ost_apikey=ABCDEF1234567890ABCDEF1234567890
 loglevel=debug
 testmode=true
 # configparser - https://docs.python.org/3/library/configparser.html
